# lawn-concierge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml  writeup.md
.githooks/: commit-msg
app/: __init__.py  agent.py
app/sub_agents/: __init__.py  diagnosis.py  lawn_care.py  scheduler.py  watering.py
app/tools/: __init__.py  calendar_tools.py
deployment/terraform/dev/: main.tf  variables.tf
mcp_server/: __init__.py  server.py
mcp_server/tools/: __init__.py  diagnosis.py  lawn_advisor.py  weather.py
scripts/: generate_traces.py
tests/eval/: eval_config.json  eval_config.yaml.template
tests/eval/datasets/: scenarios.json
tests/eval/evalsets/: basic.evalset.json
tests/integration/: test_agent.py
tests/unit/: test_tools.py
