[project]
name = "lawn-concierge"
version = "0.1.0"
description = "AI-powered lawn care concierge agent built with Google ADK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.15.0,<2.0.0",
    "mcp>=1.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.130.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
